source/stylesheets/blocks/_intro.scss
.intro {
  background-color: #fff;
  color: $c-fore-very-light;
  position: relative;
  min-height: 100vh;

  > .wrapper {
    padding: 80px 50px 40px 50px;
    max-width: ($max-width + 100px);
  }

  h1 {
    width: calc(100% + 20px);
    text-transform: uppercase;
    margin: 0 0 20px -20px;
    text-align: right;

    .line {
      font: 400 95px/97px $f-pixel;
      display: flex;
      flex-direction: row;
      justify-content: space-between;

      > * {
        flex: 0 0 auto;
      }
    }

    .typing {
      margin: 0;
    }

    img {
      display: inline-block;
      height: 58px;
      margin-left: 15px;
      margin-bottom: -4px;
      opacity: 0;
      animation: fade 1s linear;
      animation-fill-mode: forwards;

      &:nth-child(2) {
        animation-delay: 0.5s;
      }

      &:nth-child(3) {
        animation-delay: 1s;
      }
    }

    hr {
      display: inline-block;
      width: 0;
      height: 22px;
      border: none;
      margin: 0;
      background-color: $c-fore-very-light;
      animation: grow 1s;
      animation-fill-mode: forwards;
    }
  }

  .three-col {
    display: flex;
    flex-direction: row;
    width: calc(100% + 50px);
    margin-left: -50px;

    > * {
      width: 33.33%;
      flex: 1 1 100%;

      &:nth-child(3) {
        min-width: 416px;
      }
    }

    .gif {
      width: 100%;
      height: auto;
    }

    figure {
      margin: 0;
      position: relative;
      top: 32px;
    }
  }

  .scores {
    padding-top: 10px;
    text-align: right;

    .message {
      font: 400 65px/70px $f-pixel-condensed;
      margin: 0 0 20px 0;
      text-align: left;
      text-transform: uppercase;
      display: inline-block;
      min-width: 100%;

      span:not(.to-type) {
        display: inline-block;
        padding: 10px 30px;
        background-color: $c-primary;
        color: #fff;
      }

      &:nth-child(2) {
        text-align: right;

        span {
          background-color: $c-secondary;
          color: $c-fore-very-light;
        }
      }

      &:nth-child(3) {
        text-align: right;

        span {
          background-color: $c-fore-very-light;
          animation: blink 1.5s ease;

          &:before {
            content: 'Level ';
          }
        }
      }
    }
  }

  .score {
    text-transform: uppercase;
    text-align: right;

    span {
      font-size: 30px;

      &:before {
        content: 'Score';
      }
    }

    p {
      font-size: 90px;
      line-height: 50px;
      margin: 5px -7px 0 0;
    }
  }

  h2 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    margin-top: 30px;

    ul {
      flex: 0 0 auto;
      margin: 0;
      padding: 0;
      list-style: none;
      display: flex;
      flex-direction: row;
      flex-wrap: nowrap;

      &:nth-child(2) {
        margin-left: 100px;
      }

      &:nth-child(3) {
        margin-left: -50px;
      }

      li {
        flex: 0 0 auto;
        font: 400 50px/65px $f-pixel-condensed;
        margin-top: 25px;
        text-align: left;

        span:not(.to-type) {
          display: inline-block;
          padding: 0 30px;
          background-color: $c-secondary;
          color: $c-fore-very-light;
        }

        &:nth-child(3n + 1) {
          span {
            background-color: $c-primary;
            color: #fff;
          }
        }

        &:nth-child(3n + 3) {
          span {
            background-color: $c-fore-very-light;
            color: #fff;
          }
        }
      }
    }
  }

  .tetris {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    padding: 0 30px 0 30px;
    width: calc(33.33% - 60px);

    .tetris-block {
      width: calc(10% - 4px);
      height: calc(8.33% - 4px);
      margin: 2px;
      flex: 1 1 auto;

      &.full {
        background-color: $c-fore-very-light;
      }
    }
  }

  figure {
    display: block;
    position: relative;
  }

  .gif {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 10;
    width: 100%;
    height: 100%;
    display: none;
  }

  .puzzle {
    width: 100%;
    padding-top: 100%;
    position: relative;
    user-select: none;

    picture {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      position: absolute;
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;
    }

    img {
      flex: 0 0 auto;
      width: 25%;
      height: 25%;
      transition: all .05s ease-out;

      &.positioned {
        position: absolute;
      }
    }
  }
}

@keyframes grow {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

@keyframes fade {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@keyframes blink {
  0% {
      opacity: 0;
  }

  20% {
      opacity: 1;
  }

  40% {
      opacity: 0;
  }

  60% {
      opacity: 1;
  }

  80% {
      opacity: 0;
  }

  100% {
      opacity: 1;
  }
}

@include media($small-desktop) {
  .intro {
    min-height: 740px;

    > .wrapper {
      padding: 50px 20px 40px 20px;
    }

    h1 {
      width: 100%;
      margin-left: 0;
      margin-bottom: 10px;

      .line {
        font-size: 65px;
        line-height: 67px;
      }

      img {
        height: 42px;
      }
    }

    h2 {
      ul {
        &:nth-child(1) {
          margin-left: 30px;
        }

        &:nth-child(3) {
          margin-left: 0;
        }

        li {
          font-size: 40px;
          line-height: 50px;

          span:not(.to-type) {
            padding: 0 15px;
          }
        }
      }
    }

    .three-col {
      width: calc(100% + 20px);
      margin: 40px 0 30px -20px;

      > * {
        &:nth-child(3) {
          min-width: 240px;
          max-width: 240px;
        }
      }

      figure {
        top: 8px;
      }
    }

    .score {
      margin-top: -8px;

      p {
        font-size: 55px;
        line-height: 20px;
      }
    }

    .scores {
      .message {
        font-size: 35px;
        line-height: 40px;
        margin-bottom: 10px;
      }
    }

    .tetris {
      padding: 0 15px 0 15px;
      width: calc(33.33% - 30px);
    }
  }
}

@include media($tablet) {
  .intro {
    h2 {
      ul {
        &:nth-child(1) {
          margin-left: 30px;
        }

        &:nth-child(3) {
          margin-left: 0;
        }

        li {
          font-size: 28px;
          line-height: 40px;

          span:not(.to-type) {
            padding: 0 10px;
          }
        }
      }
    }

    .three-col {
      > * {
        &:nth-child(3) {
          min-width: 250px;
          max-width: auto;
        }
      }

      figure {
        top: 26px;
      }
    }
  }
}

@include media($mobile) {
  .intro {
    > .wrapper {
      padding: 0;
      position: relative;
    }

    h1 {
      display: none;
    }

    h2 {
      margin-top: 10px;
      padding: 0 20px;

      ul {
        flex-wrap: wrap;

        &:nth-child(1) {
          min-height: 120px;
          margin: 0 0 10px 0;
        }

        &:nth-child(2) {
          min-height: 80px;
          margin: 0 0 10px 0;
        }

        &:nth-child(3) {
          min-height: 120px;
          margin: 0 0 10px 0;
        }

        li {
          margin: 0;

          span:not(.to-type) {
            padding: 0 15px;
          }
        }
      }
    }

    .three-col {
      width: 100%;
      margin: 0;
      display: block;

      > * {
        width: 100%;

        &:nth-child(3) {
          width: 100%;
          max-width: 100%;
          min-width: 100%;
          margin: 0;
          padding: 0;
        }
      }

      figure {
        top: 0;
      }

      picture {
        display: block;
        width: 100%;
      }
    }

    .tetris {
      display: none;
    }

    .score {
      display: none;
    }

    .scores {
      .message {
        position: relative;
        z-index: 100;

        span:not(.to-type) {
          display: block;
          text-align: center;
        }
      }
    }
  }
}

